# miniSQLDB

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/models/: Column.cpp  Column.h  Record.cpp  Record.h  Table.cpp  Table.h
src/parser/: ASTNodes.h  SQLTokenizer.cpp  SQLTokenizer.h
src/storage/: StorageManager.cpp  StorageManager.h
src/utils/: FileManager.cpp  FileManager.h
tests/: test_filemanager.cpp  test_runner.cpp
